added code on words1_play_on_words

--- a/code/spoj/words1_play_on_words/makefile
+++ b/code/spoj/words1_play_on_words/makefile
@@ -7,8 +7,12 @@ all:
 run: Main.class
 	clear
 	scala Main < ./input.txt
+	scala Main < ./input2.txt
+
+clean:
+	find . -iname '*.class' -print0 | xargs -0 rm -rf
 
 Main.class: words1_play_on_words.scala
 	scalac ./words1_play_on_words.scala
 
-.PHONY: all run
+.PHONY: all run clean
