added build.sbt to this project

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,13 @@
 *
 
 # But not these files...
-!.gitignore
 !*.md
+!*.sbt
 !*.scala
 !*.sh
-!makefile
+!.gitignore
 !license.txt
+!makefile
 # etc...
 
 # ...even if they are in subdirectories
