--- a/scala_initiatives/.scalafix.conf
+++ b/scala_initiatives/.scalafix.conf
@@ -1,8 +1,8 @@
 // https://scalacenter.github.io/scalafix/docs/users/configuration.html
 rules = [
-  // Collection213CrossCompat,
+  Collection213CrossCompat,
   DisableSyntax,
-  ExplicitResultTypes,
+  // ExplicitResultTypes,
   LeakingImplicitClassVal,
   NoAutoTupling,
   NoValInForComprehension,
